--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wd-043</title>
-  </head>
-  <body>
-    <!-- Bashar -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Wd-043</title>
+    </head>
+    <body>
+        <!-- Bashar -->
 
-    <!-- Mochi -->
+        <!-- Mochi -->
 
-    <!-- Kimberly -->
+        <!-- Kimberly -->
 
-    <!-- Lukas -->
+        <!-- Lukas -->
 
-    <!-- Rohini -->
+        <!-- Rohini -->
 
-    <!-- Nories -->
+        <!-- Nories -->
 
-    <!-- Catia -->
+        <!-- Catia -->
 
-    <!-- Gerrett -->
+        <!-- Gerrett -->
+        <h2 class="garrett">Garrett</h2>
+        <!-- Sully -->
 
-    <!-- Sully -->
+        <!-- Eudes -->
 
-    <!-- Eudes -->
+        <!-- Priyanka -->
 
-    <!-- Priyanka -->
-
-    <!-- Harun -->
-  </body>
+        <!-- Harun -->
+    </body>
 </html>
