Added a delightful image of a wild European rabbit to my section of the document

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bashar -->
 
     <!-- Mochi -->
-
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Oryctolagus_cuniculus_Rcdo.jpg/640px-Oryctolagus_cuniculus_Rcdo.jpg" alt="Oryctolagus cuniculus, rabbit">
     <!-- Kimberly -->
 
     <!-- Lukas -->
