--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Rohini -->
 
     <!-- Nories -->
-<h2 class="Nories">Nories</h2>
+<h2 class="nories">Nories</h2>
     <!-- Catia -->
 
     <!-- Gerrett -->
