--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wd-043</title>
-  </head>
-  <body>
-    <!-- Bashar -->
 
-    <!-- Mochi -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wd-043</title>
+</head>
 
-    <!-- Kimberly -->
+<body>
+  <!-- Bashar -->
 
-    <!-- Lukas -->
+  <!-- Mochi -->
 
-    <!-- Rohini -->
+  <!-- Kimberly -->
+  <h2 class="kimberly">Hello</h2>
 
-    <!-- Nories -->
+  <!-- Lukas -->
 
-    <!-- Catia -->
+  <!-- Rohini -->
 
-    <!-- Gerrett -->
+  <!-- Nories -->
 
-    <!-- Sully -->
+  <!-- Catia -->
 
-    <!-- Eudes -->
+  <!-- Gerrett -->
 
-    <!-- Priyanka -->
+  <!-- Sully -->
 
-    <!-- Harun -->
-  </body>
+  <!-- Eudes -->
+
+  <!-- Priyanka -->
+
+  <!-- Harun -->
+</body>
+
 </html>
